# dfx-hf-models-node

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  node.json  pyproject.toml  start-local.sh
.github/workflows/: ci.yml
dfx/components/: __init__.py  export_embeddings_data.py  llmlingua.py  minilm_embeddings.py
dfx/components/all-MiniLM-L6-V2/: run.py
docs/: node-configuration.md  node-registration.md
examples/all-MiniLM-L6-V2/: example.py
scripts/: download.sh
src/node/: __init__.py  api.py  http.py  logger.py  main.py  nats.py
tests/: test_node.py
